:sparkles: feat(expenses): Implementa endpoint de buscar despesas por método de pagamento